--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "detect-collisions": "^9.26.4",
     "framer-motion": "^12.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
